feat: remove remaining promo  from loyalty profile flow
